# workstation-ansible

./: .gitignore  .gitlab-ci.yml  README.md  machine-ready.py  main.yaml  play.yaml  pyproject.toml
playbook/: .ansible-lint  README.md  clean.yaml  main.yaml  pyproject.toml  requirements.txt  requirements.yaml
playbook/inventory/: workstation.yaml
playbook/roles/docker/tasks/: main.yaml
playbook/roles/git/defaults/: main.yaml
playbook/roles/git/files/: pre-commit
playbook/roles/git/tasks/: main.yaml
playbook/roles/go/defaults/: main.yaml
playbook/roles/go/tasks/: main.yaml
playbook/roles/group_distributions/tasks/: main.yaml
playbook/roles/hashicorp/tasks/: main.yaml
playbook/roles/helm/defaults/: main.yaml
playbook/roles/helm/tasks/: main.yaml
playbook/roles/k3d/tasks/: main.yaml
playbook/roles/kind/tasks/: main.yaml
playbook/roles/kubectl/defaults/: main.yaml
playbook/roles/kubectl/tasks/: main.yaml
playbook/roles/neovim/defaults/: main.yaml
playbook/roles/neovim/files/: init.lua  lazy-lock.json  plugins.lua
playbook/roles/neovim/tasks/: main.yaml
playbook/roles/ohmyzsh/defaults/: main.yaml
playbook/roles/ohmyzsh/files/plugins/bitwarden/: README.md  bitwarden.plugin.zsh
playbook/roles/ohmyzsh/tasks/: main.yaml
playbook/roles/ohmyzsh/templates/: minima.zsh-theme  zshrc.j2
playbook/roles/tmux/files/: tmux.conf
playbook/roles/tmux/tasks/: main.yaml
playbook/vars/: debian-bookworm.yaml  debian-bullseye.yaml  ubuntu-jammy.yaml
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
(+31 files in other folders)
